fix: input styles on firefox

--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -267,7 +267,7 @@
 
 .scroll-wrapper {
   width: 260px;
-  height: 30px;
+  height: 40px;
   overflow: hidden;
   overflow-x: scroll;
   scrollbar-color: var(--button-bg-color) var(--transparent);
@@ -840,7 +840,7 @@ p.transaction-hash {
   }
 
   .scroll-wrapper {
-    height: 40px;
+    height: 50px;
 
     & > .currency-input {
       min-width: 80px;
